--- a/index.html
+++ b/index.html
@@ -4,4 +4,8 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Henson Family</title>
+<body>
+Henson Family Website
+</body>
+</html>   
   
